src/web/Learning.Web/Learning.Web.Client/wwwroot/css/site.css
:root {
    --gray-50: #F5F5F5;
    --red-light-1: #f1e1e1;
    --green-light-1: #eaf9ea;
    --green-gray-50: #f5f5f5;
    --green-gray-200: #dfe9df;
    --mud-appbar-height: 99px !important;
    --app-success-failure-feedback-component: 150px;
    --app-mud-default-borderradius: 24px !important;
}

html, body {
    height: 100% !important;
    margin: 0px !important;
}

body {
    font-size: 62.5%;
}


.active-link-class {
    background-color: red;
}

.mud-appbar {
    background-color: #2A2A2A45 !important;
}


.mud-main-content {
    height: 100vh !important;
    padding-top: 0px !important;
}

.mud-button-no-hyperlink:hover {
    text-decoration: none;
    color: inherit;
}

.no-link {
    text-decoration: none !important;
    color: inherit !important;
}

.validation-message {
    color: red !important;
    padding-top: 5px !important;
    font-size: 0.75rem !important;
}

.en-page-container {
    margin-top: var(--mud-appbar-height) !important;
}


@media (max-width: 960px) {
    :root {
        --mud-appbar-height: 60px !important;
        --app-success-failure-feedback-component: 92px;
        --app-mud-default-borderradius: 12px !important;
    }

    .app-nav-menu {
        color: #1E1E1E !important;
        font-family: var(--ff-500) !important;
        font-size: 0.75rem !important;
    }
}

@media (min-width: 961px) {

    .gap-md-12 {
        gap: 48px !important;
    }
}

